# Vision

./: README.md
Design1/: CMakeLists.txt
Design1/examples/: CMakeLists.txt  webcam_picture.cpp
Design1/include/Vision/: Display.hpp
Design1/src/: Transformation.cpp
Design2/: CMakeLists.txt  main.cpp
Design2/include/: BlobDetector.hpp  File.hpp
Design2/src/: BlobDetector.cpp  CMakeLists.txt  File.cpp
docs/: StandardHeader.txt
examples/: CMakeLists.txt  webcam_picture.cpp  webcam_picture_edit.cpp
include/Vision/: Camera.hpp  Editor.hpp  Factory.hpp  FileManager.hpp  Image.hpp  Transformation.hpp
scripts/: clean.sh
src/: CMakeLists.txt  Camera.cpp  Display.cpp  Editor.cpp  Factory.cpp  FileManager.cpp  Image.cpp  Transformation.cpp
